[package]
name = "smt"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/smt"
description = "Implements a Sparse Merkle tree for a key-value store. The tree implements the same optimisations specified in the libra whitepaper, to reduce the number of hash operations required per tree operation to O(k) where k is the number of non-empty elements in the tree."
license = "MIT/Apache-2.0"

[[bench]]
path = "benches/bench.rs"
name = "bench"
harness = false

[features]
default = ["std"]
std = ["bytes/default"]

[dependencies]
bytes = { version = "1.2", default-features = false }
digest = "0.10"

[dev-dependencies]
criterion = "0.3"
tempfile = "3"
parking_lot = "0.12"
sha2 = "0.10"
hashbrown = "0.12"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
